# AI_powered_data_pipeline

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/data_extract_tool/: __init__.py  utils.py
src/data_extract_tool/pdf_extractor/: __init__.py  pdf_extractor.py
src/data_extract_tool/text_parser/: __init__.py  flexible_text_parser.py
test_implementation/test_schemas/: schema.json  schema_alt.json
